[project]
name = "microtabpfn"
version = "0.1.0"
description = "A minimal, educational implementation of TabPFN"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.0,<=2.2.2",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

